force-app/main/default/objects/qb_Employee__c/qb_Employee__c.object-meta.xml
<CustomObject>
    <label>Quickbooks Employee</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quickbooks Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>