force-app/main/default/objects/qb_Employee__c/fields/FamilyName__c.field-meta.xml
<CustomField>
    <fullName>FamilyName__c</fullName>
    <label>FamilyName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>