force-app/main/default/objects/qb_Employee__c/fields/PrimaryPhone__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPhone__c</fullName>
    <label>PrimaryPhone</label>
    <type>Phone</type>
</CustomField>