force-app/main/default/objects/qb_Employee__c/fields/PrintOnCheckName__c.field-meta.xml
<CustomField>
    <fullName>PrintOnCheckName__c</fullName>
    <label>PrintOnCheckName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>